<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundal4">

    <TextView
            android:id="@+id/tv_title_register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_registration"
            android:textSize="24sp"
            android:textColor="@color/button_primary_start"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/LinearLayoutRegister2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_register2"
            app:layout_constraintBottom_toTopOf="@+id/btn_go_to_profile"
            app:layout_constraintVertical_bias="0.15">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tell_us_a_bit_about_yourself"
                android:textSize="14sp"
                android:textColor="@color/button_primary_start"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/button_pressed_center"
                android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/button_pressed_start"
                android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:inputType="number">
        </com.google.android.material.textfield.TextInputEditText>
    </LinearLayout>

    <Button
            android:id="@+id/btn_go_to_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:backgroundTint="@null"
            android:background="@drawable/button_selector"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toTopOf="@+id/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayoutRegister2"
            android:layout_marginBottom="16dp">
    </Button>

    <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/back_to_login"
            android:background="@drawable/button_selector"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>