<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundal5">

    <TextView
        android:id="@+id/tv_title_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrisense_dashboard"
        android:textSize="@dimen/text_size_heading"
        android:textColor="@color/button_primary_start"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/default_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_dashboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/xlarge_space"
            android:maxWidth="@dimen/max_content_width">

            <Button
                android:id="@+id/btn_calculate_nutrition"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="@dimen/button_height_large"
                android:text="@string/calculate_food_nutrition"
                android:background="@drawable/button_selector"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_subtitle"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/medium_space"
                style="@null" />

            <Button
                android:id="@+id/btn_view_history"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="@dimen/button_height_normal"
                android:text="@string/view_food_history"
                android:background="@drawable/button_selector"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/small_space"
                style="@null" />

            <Button
                android:id="@+id/btn_recipe_search"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="@dimen/button_height_normal"
                android:text="@string/recipe_search"
                android:background="@drawable/button_selector"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/small_space"
                style="@null" />

            <Button
                android:id="@+id/btn_recipe_history"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="@dimen/button_height_normal"
                android:text="@string/recipe_collection"
                android:background="@drawable/button_selector"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/small_space"
                style="@null" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="@dimen/button_height_normal"
                android:text="@string/settings_amp_goals"
                android:background="@drawable/button_selector"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/small_space"
                style="@null" />

            <Button
                android:id="@+id/btn_profile"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="@dimen/button_height_normal"
                android:text="@string/my_profile"
                android:background="@drawable/button_selector"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:layout_marginBottom="@dimen/small_space"
                style="@null" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>